--- a/src/index.css
+++ b/src/index.css
@@ -30,3 +30,5 @@ body {
 .w-40{
   width: '15px' !important
 }
+
+.page-loader {position: fixed; left: 0; top: 0; width: 100%; height: 100vh; z-index: 99; background: rgba(47, 54, 61, .9) !important; display: flex; align-items: center; justify-content: center;}
